--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-cli-webpack</title>
+    <title>koaloha</title>
   </head>
   <body>
     <div id="app"></div>
